# faultscope

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.alerting  Dockerfile.base  Dockerfile.dashboard  Dockerfile.inference  Dockerfile.ingestion  Dockerfile.streaming
docs/: architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md
docs/adr/: 001-event-driven-architecture.md  002-async-stack.md  003-ml-model-strategy.md
docs/api/: api-reference.md
examples/api-client/: README.md  predict_rul.py
examples/basic-simulation/: README.md  run_simulation.py
examples/custom-alert-rules/: README.md  custom_rules.py
examples/model-training-demo/: README.md  train_demo.py
infra/kafka/: create-topics.sh
infra/monitoring/: prometheus.yml
infra/timescaledb/: init.sql
scripts/: health_check.py  seed_demo_data.py  train_models.py
src/faultscope/: __init__.py
src/faultscope/alerting/: __init__.py  __main__.py  config.py  consumer.py  coordinator.py  rules.py
src/faultscope/alerting/api/: __init__.py  app.py  schemas.py
src/faultscope/alerting/api/routes/: __init__.py  incidents.py  rules.py
src/faultscope/alerting/engine/: __init__.py  aggregator.py  evaluator.py  suppressor.py
src/faultscope/alerting/notifiers/: base.py  email.py  slack.py  webhook.py
src/faultscope/common/: config.py  exceptions.py  logging.py  telemetry.py
src/faultscope/common/db/: engine.py
src/faultscope/common/kafka/: consumer.py  producer.py  schemas.py
src/faultscope/dashboard/: __main__.py
src/faultscope/dashboard/grafana/dashboards/: equipment_health.json
src/faultscope/dashboard/grafana/provisioning/dashboards/: dashboards.yml
src/faultscope/dashboard/grafana/provisioning/datasources/: datasources.yml
src/faultscope/dashboard/streamlit/: app.py  config.py
src/faultscope/dashboard/streamlit/components/: api_client.py  charts.py
src/faultscope/dashboard/streamlit/pages/: equipment_detail.py  incidents.py  model_performance.py  overview.py
src/faultscope/features/: __main__.py  config.py  extractor.py  labeler.py  pipeline.py  store.py
src/faultscope/inference/: __init__.py  __main__.py  config.py  consumer.py
src/faultscope/inference/api/: __init__.py  app.py  middleware.py  schemas.py
src/faultscope/inference/api/routes/: __init__.py  catalog.py  health.py  predictions.py
src/faultscope/inference/engine/: __init__.py  predictor.py  version_store.py
src/faultscope/ingestion/: __main__.py  config.py  publisher.py
src/faultscope/ingestion/cmapss/: loader.py  sensor_map.py
src/faultscope/ingestion/simulator/: engine.py  failure_modes.py
src/faultscope/retraining/: __init__.py  __main__.py  comparator.py  config.py  deployer.py  drift.py  pipeline.py
src/faultscope/streaming/: __main__.py  config.py  models.py  pipeline.py  quality.py  writer.py
src/faultscope/streaming/features/: correlation.py  spectral.py  temporal.py
src/faultscope/training/: __main__.py  config.py  evaluator.py  pipeline.py  tracker.py  validation.py
src/faultscope/training/models/: condition_classifier.py  lifespan_predictor.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: conftest.py  test_alert_engine.py  test_inference_api.py  test_streaming_pipeline.py
tests/unit/alerting/: test_incident_aggregator.py  test_rule_evaluator.py
tests/unit/common/: test_kafka_schemas.py
tests/unit/features/: test_labeler.py
tests/unit/retraining/: test_drift_monitor.py
tests/unit/streaming/: test_quality_checker.py  test_spectral_features.py  test_temporal_features.py
