[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultscope"
version = "1.0.0"
description = "Real-time predictive maintenance platform for manufacturing equipment using streaming ML and anomaly detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "FaultScope Contributors" }]
keywords = [
    "predictive-maintenance",
    "machine-learning",
    "kafka",
    "timescaledb",
    "iot",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Async Kafka
    "aiokafka>=0.10.0",
    # Database (async)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Config & validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    # ML core
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    # Deep learning
    "tensorflow>=2.15.0",
    "keras>=2.15.0",
    # Hyperparameter tuning
    "optuna>=3.5.0",
    # MLflow
    "mlflow>=2.10.0",
    "boto3>=1.34.0",
    # Observability
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "prometheus-client>=0.19.0",
    # Dashboard
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    # Resilience
    "tenacity>=8.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # Notifications
    "aiosmtplib>=3.0.0",
    "slack-sdk>=3.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[kafka,postgresql]>=4.3.0",
    "hypothesis>=6.98.0",
    "httpx>=0.27.0",
    "locust>=2.23.0",
]
lint = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
faultscope-ingest = "faultscope.ingestion.__main__:main"
faultscope-stream = "faultscope.streaming.__main__:main"
faultscope-features = "faultscope.features.__main__:main"
faultscope-train = "faultscope.training.__main__:main"
faultscope-retrain = "faultscope.retraining.__main__:main"
faultscope-serve = "faultscope.inference.__main__:main"
faultscope-alerts = "faultscope.alerting.__main__:main"
faultscope-dashboard = "faultscope.dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/faultscope"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit security
    "ANN", # flake8-annotations
]
ignore = [
    "S101",   # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S106"]
"src/faultscope/training/models/**" = ["N803", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "mlflow.*", "tensorflow.*", "keras.*", "optuna.*", "streamlit.*",
    "aiokafka.*", "asyncpg.*", "scipy.*", "aiosmtplib.*",
    "slack_sdk.*", "prometheus_client.*", "opentelemetry.*",
    "structlog.*", "tenacity.*", "locust.*",
    "pandas.*", "sklearn.*", "plotly.*", "boto3.*", "botocore.*",
    "jose.*", "slowapi.*", "uvicorn.*", "alembic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy ndarray generic params require numpy-stubs; disable for numeric modules
module = [
    "faultscope.streaming.features.*",
    "faultscope.training.*",
    "faultscope.retraining.*",
    "faultscope.features.*",
]
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/faultscope",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "-v",
]
markers = [
    "unit: pure unit tests with no external deps",
    "integration: tests requiring real Kafka/DB via testcontainers",
    "e2e: full end-to-end pipeline tests",
    "slow: tests that take more than 10 seconds",
]

[tool.coverage.run]
source = ["src/faultscope"]
omit = ["*/__main__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
